--- a/Materias/2S2020/PED_CE342/Turma_C/Turma_C.tex
+++ b/Materias/2S2020/PED_CE342/Turma_C/Turma_C.tex
@@ -1,4 +1,4 @@
-% Created 2020-11-24 ter 21:02
+% Created 2020-12-04 sex 16:09
 % Intended LaTeX compiler: pdflatex
 \documentclass[11pt]{article}
 \usepackage[utf8]{inputenc}
@@ -38,7 +38,7 @@ citecolor=blue,filecolor=blue,menucolor=blue,urlcolor=blue]{hyperref}
 \maketitle
 
 \section{Monetaristas}
-\label{sec:org2f44710}
+\label{sec:org01685b2}
 
 \begin{center}
 \begin{longtable}{lr}
@@ -98,21 +98,21 @@ citecolor=blue,filecolor=blue,menucolor=blue,urlcolor=blue]{hyperref}
 
 
 \subsection{Notas}
-\label{sec:orgb591039}
+\label{sec:org4c6edd1}
 \begin{center}
 \includegraphics[width=.9\linewidth]{./figs/monetaristas.png}
 \end{center}
 
 
 \subsection{Notas e presença}
-\label{sec:org936dea6}
+\label{sec:orgf9db273}
 
 \begin{center}
 \includegraphics[width=.9\linewidth]{./figs/monetaristas_presenca.png}
 \end{center}
 
 \section{Novos Clássicos}
-\label{sec:orgc9efab5}
+\label{sec:org82fc41d}
 
 \begin{itemize}
 \item[{$\square$}] Computar notas Forms
@@ -172,7 +172,7 @@ citecolor=blue,filecolor=blue,menucolor=blue,urlcolor=blue]{hyperref}
 \end{longtable}
 \end{center}
 \subsection{Notas}
-\label{sec:org2e3df8d}
+\label{sec:org938c549}
 \begin{center}
 \includegraphics[width=.9\linewidth]{./figs/novosclassicos.png}
 \end{center}
@@ -180,14 +180,14 @@ citecolor=blue,filecolor=blue,menucolor=blue,urlcolor=blue]{hyperref}
 
 
 \subsection{Notas e Presença}
-\label{sec:orge1d5154}
+\label{sec:org8f772b8}
 \begin{center}
 \includegraphics[width=.9\linewidth]{./figs/novosclassicos_presenca.png}
 \end{center}
 \subsection{Verificação de plágio por amostragem}
-\label{sec:org7b88f0a}
+\label{sec:orgc114aaa}
 \subsubsection{Sorteio}
-\label{sec:orga9ecfa5}
+\label{sec:org323efb5}
 
 \begin{minted}[frame=lines,fontsize=\scriptsize,linenos]{python}
 pre_selecionados = ["216397", "235042"]
@@ -223,39 +223,11 @@ resultado
 10       245099
 11       257876
 \end{verbatim}
-\begin{verbatim}
-   RA Sorteados
-1        103034
-2        199967
-3        205151
-4        213549
-5        230645
-6        232568
-7        233566
-8        237856
-9        242328
-10       245099
-11       257876
-\end{verbatim}
-\begin{verbatim}
-   RA Sorteados
-1        103034
-2        199967
-3        205151
-4        213549
-5        230645
-6        232568
-7        233566
-8        237856
-9        242328
-10       245099
-11       257876
-\end{verbatim}
 
 
 
 \subsubsection{Resultado Turnitin \textit{<2020-11-14 sáb>}}
-\label{sec:org996d650}
+\label{sec:org6e3b4c2}
 
 \begin{table}[htbp]
 \caption{\label{TurnitinNvC}Resumo relatório de origilidadade}
@@ -283,39 +255,34 @@ RA & Grau de semelhança\\
 
 \begin{enumerate}
 \item Gráfico
-\label{sec:orgc601f4c}
+\label{sec:org2a53964}
 \begin{center}
 \includegraphics[width=.9\linewidth]{./figs/turintin_NvC_fig.png}
 \end{center}
 
 \item Atualizando notas
-\label{sec:orgde9ceea}
+\label{sec:orge4eecdb}
 \end{enumerate}
 
 \subsection{Questões}
-\label{sec:org1ab3ad0}
+\label{sec:orgabc7d64}
 
 
 
 \subsubsection{Importando pacotes e funções}
-\label{sec:org59dbe40}
+\label{sec:org223207b}
 
 \begin{center}
 \includegraphics[width=.9\linewidth]{./figs/similarity_forms_1.png}
 \end{center}
-\begin{center}
-\includegraphics[width=.9\linewidth]{./figs/similarity_forms_1.png}
-\end{center}
-\begin{center}
-\includegraphics[width=.9\linewidth]{./figs/similarity_forms_1.png}
-\end{center}
+
 
 
 
 
 
 \section{Novos Keynesianos}
-\label{sec:orgd382fb3}
+\label{sec:org5c22122}
 
 \begin{itemize}
 \item[{$\boxtimes$}] Computar notas
@@ -376,7 +343,7 @@ RA & Grau de semelhança\\
 \end{longtable}
 \end{center}
 \subsection{Notas}
-\label{sec:org00827a5}
+\label{sec:org776832c}
 \begin{center}
 \includegraphics[width=.9\linewidth]{./figs/novoskeynesianos.png}
 \end{center}
@@ -384,19 +351,19 @@ RA & Grau de semelhança\\
 
 
 \subsection{Notas e Presença}
-\label{sec:org8c539d3}
+\label{sec:org8470d1f}
 \begin{center}
 \includegraphics[width=.9\linewidth]{./figs/novoskeynesianos_presenca.png}
 \end{center}
 \subsection{Verificação de plágio por amostragem}
-\label{sec:orgc6c723c}
+\label{sec:org37180a9}
 \subsubsection{Sorteio}
-\label{sec:org7fbbc3f}
+\label{sec:orgacb0c1d}
 
 Como foram entregues aproximadamente 30\% de resenhas, todos os alunos foram submetidos ao turnitin.
 
 \subsubsection{Resultado Turnitin}
-\label{sec:org51d48ef}
+\label{sec:org1a77174}
 
 \begin{table}[htbp]
 \caption{\label{TurnitinNvK}Resumo relatório de origilidadade}
@@ -405,6 +372,7 @@ Como foram entregues aproximadamente 30\% de resenhas, todos os alunos foram sub
 \hline
 RA & Grau de semelhança\\
 \hline
+091108 & 2\%\\
 158425 & 3\%\\
 197724 & 0\%\\
 199667 & 3\%\\
@@ -413,6 +381,7 @@ RA & Grau de semelhança\\
 230645 & 0\%\\
 234311 & 0\%\\
 235042 & 29\%\\
+242328 & 2\%\\
 244207 & 52\%\\
 257748 & 0\%\\
 257876 & 7\%\\
@@ -423,7 +392,7 @@ RA & Grau de semelhança\\
 
 \begin{enumerate}
 \item Gráfico
-\label{sec:org73bb18f}
+\label{sec:org9fec770}
 \begin{center}
 \includegraphics[width=.9\linewidth]{./figs/turintin_NvK_fig.png}
 \end{center}
@@ -431,98 +400,220 @@ RA & Grau de semelhança\\
 
 
 \item Atualização das notas
-\label{sec:org82e9e80}
+\label{sec:org47518ea}
 \end{enumerate}
 
-\section{Lista de presença e notas}
-\label{sec:org12240dc}
-\begin{center}\begin{landscape}
-\small
-\setlength\LTleft{0pt}
-\setlength\LTright{0pt}
-\begin{longtable}{llrrrrrrrrl}
-\caption{Lista de presença e de notas}\label{lista}\\
+\section{Regime de Metas}
+\label{sec:org70c24f3}
+
+\begin{itemize}
+\item[{$\square$}] Preencher presenhas na tabela da Ana Rosa
+\item[{$\square$}] Sortear turnitin
+\end{itemize}
+\begin{center}
+\begin{longtable}{lr}
+\caption{Notas das resenhas - Novo Consenso}\\
 \toprule
-{} &                                   Nome &  Resenha Monetaristas &  2020-10-19 &  2020-10-26 &  2020-11-09 &  Resenha Novos Clássicos &  2020-11-16 &  2020-11-23 &  Resenha Novos Keynesianos &                   Email \\
-\textbf{RA    } &                                        &                       &             &             &             &                          &             &             &                            &                         \\
+{} &  Resenha Regime de Metas \\
+\textbf{RA    } &                          \\
 \midrule
 \endhead
 \midrule
-\multicolumn{11}{r}{{Continued on next page}} \\
+\multicolumn{2}{r}{{Continued on next page}} \\
 \midrule
 \endfoot
 
 \bottomrule
 \endlastfoot
-\textbf{230645} &                    alice pereira dario &                  50.0 &       17.86 &        0.00 &       19.47 &                      5.0 &       57.50 &        0.00 &                        5.0 &  a230645@dac.unicamp.br \\
-\textbf{213549} &           beatriz helena toledo pastre &                  30.0 &        0.00 &        0.00 &        6.19 &                      5.0 &           - &        5.88 &                        0.0 &  b213549@dac.unicamp.br \\
-\textbf{257748} &             breno rivelino fima castro &                  50.0 &        7.14 &        5.31 &       93.81 &                      7.0 &       28.33 &       70.59 &                        5.0 &  b257748@dac.unicamp.br \\
-\textbf{232568} &                 caio cimino de almeida &                  70.0 &           - &        2.65 &       54.87 &                      5.0 &       70.00 &        0.00 &                        0.0 &  c232568@dac.unicamp.br \\
-\textbf{233566} &                 diego tabacof labriola &                  30.0 &        0.00 &        0.00 &       91.15 &                      7.0 &           - &           - &                        0.0 &  d233566@dac.unicamp.br \\
-\textbf{215626} &                felipe barbosa de souza &                   0.0 &        0.00 &        0.00 &        0.00 &                      0.0 &       18.33 &       11.76 &                        0.0 &  f215626@dac.unicamp.br \\
-\textbf{91108 } &                 felipe eboli sotorilli &                     - &        1.79 &        0.00 &       77.88 &                        - &       29.17 &       76.47 &                          - &   f91108@dac.unicamp.br \\
-\textbf{234311} &                  felipe rubbo aguilera &                  50.0 &       33.93 &        1.77 &       92.92 &                      5.0 &           - &       76.47 &                        5.0 &  f234311@dac.unicamp.br \\
-\textbf{216397} &                        gabriel pereira &                  30.0 &        0.00 &        0.88 &       76.11 &                      3.0 &        0.83 &        0.00 &                        0.0 &  g216397@dac.unicamp.br \\
-\textbf{197474} &                gabriel pereira jovetta &                  50.0 &        0.00 &        4.42 &       51.33 &                      5.0 &       46.67 &       47.06 &                        0.0 &  g197474@dac.unicamp.br \\
-\textbf{234982} &                 gabriel pereira santos &                   0.0 &           - &       13.27 &        0.00 &                      0.0 &           - &           - &                          - &  g234982@dac.unicamp.br \\
-\textbf{235042} &                gabriel silva gonçalves &                   0.0 &        0.00 &        0.00 &        0.00 &                      5.0 &           - &       17.65 &                        5.0 &  g235042@dac.unicamp.br \\
-\textbf{197724} &           gabriela santana das virgens &                  50.0 &        0.00 &        0.88 &       74.34 &                      5.0 &       30.00 &       82.35 &                        5.0 &  g197724@dac.unicamp.br \\
-\textbf{217350} &       guilherme yoshio agata domingues &                  30.0 &           - &           - &           - &                      0.0 &           - &           - &                          - &  g217350@dac.unicamp.br \\
-\textbf{174154} &               gustavo josé lara campos &                  30.0 &        0.00 &        4.42 &       16.81 &                      0.0 &           - &           - &                        0.0 &  g174154@dac.unicamp.br \\
-\textbf{237534} &         joao mateus rodrigues da silva &                  30.0 &           - &           - &           - &                      3.0 &           - &           - &                        0.0 &  j237534@dac.unicamp.br \\
-\textbf{237856} &        joão vitor dos santos rodrigues &                  50.0 &        1.79 &        0.00 &       91.15 &                      5.0 &       90.83 &        0.00 &                        0.0 &  j237856@dac.unicamp.br \\
-\textbf{199967} &                   jonas pereira cintra &                  70.0 &        0.00 &        3.54 &       82.30 &                      7.0 &       50.83 &        0.00 &                        7.0 &  j199967@dac.unicamp.br \\
-\textbf{103034} &  leonardo augusto de oliveira piovesan &                  50.0 &        0.00 &        0.00 &       93.81 &                      5.0 &       93.33 &       70.59 &                        0.0 &  l103034@dac.unicamp.br \\
-\textbf{172577} &                   lucas azevedo soares &                  50.0 &        2.68 &        5.31 &       14.16 &                      7.0 &       75.00 &       76.47 &                        0.0 &  l172577@dac.unicamp.br \\
-\textbf{159866} &              marcela chenfel dos anjos &                  50.0 &        0.89 &        0.00 &       91.15 &                      5.0 &       50.83 &       76.47 &                        0.0 &  m159866@dac.unicamp.br \\
-\textbf{221896} &               mariana sayuri silva doi &                  70.0 &       34.82 &        0.88 &       18.58 &                     10.0 &       37.50 &        0.00 &                       10.0 &  m221896@dac.unicamp.br \\
-\textbf{257876} &    maryana beatriz ventura de carvalho &                 100.0 &       67.86 &        0.88 &       93.81 &                     10.0 &       83.33 &       70.59 &                       10.0 &  m257876@dac.unicamp.br \\
-\textbf{242087} &                          miguel razera &                   0.0 &        0.89 &        1.77 &        0.00 &                        - &           - &           - &                          - &  m242087@dac.unicamp.br \\
-\textbf{242328} &    natalia kimberlle tavares imperiano &                  50.0 &           - &           - &        0.88 &                      7.0 &           - &           - &                        5.0 &  n242328@dac.unicamp.br \\
-\textbf{147614} &          pedro augusto de almeida rosa &                   0.0 &        0.00 &        0.00 &        0.00 &                      0.0 &       93.33 &       76.47 &                        0.0 &  p147614@dac.unicamp.br \\
-\textbf{176104} &              rafael da silva tomasella &                   0.0 &           - &           - &           - &                        - &           - &           - &                          - &  r176104@dac.unicamp.br \\
-\textbf{205149} &                 raphaela freitas souza &                 100.0 &           - &           - &           - &                      0.0 &           - &           - &                        0.0 &  r205149@dac.unicamp.br \\
-\textbf{205151} &               raphaela prado francisco &                   0.0 &        0.89 &       47.79 &        4.42 &                      7.0 &           - &       76.47 &                        0.0 &  r205151@dac.unicamp.br \\
-\textbf{244207} &                 sanny alves dos santos &                  70.0 &        0.89 &        0.00 &        0.00 &                      7.0 &           - &       64.71 &                        0.0 &  s244207@dac.unicamp.br \\
-\textbf{158425} &                           tales alonso &                  50.0 &        0.89 &       61.95 &       61.06 &                      7.0 &       29.17 &       70.59 &                        5.0 &  t158425@dac.unicamp.br \\
-\textbf{257932} &              thaís monello de oliveira &                 100.0 &        0.89 &        0.00 &       30.09 &                      7.0 &       24.17 &       64.71 &                        0.0 &  t257932@dac.unicamp.br \\
-\textbf{177964} &               victor hugo alves duarte &                  70.0 &        0.00 &        0.00 &        0.00 &                      5.0 &           - &           - &                        0.0 &  v177964@dac.unicamp.br \\
-\textbf{245099} &                            victor maia &                  50.0 &       16.07 &       53.98 &       70.80 &                      7.0 &       25.00 &        0.00 &                        0.0 &  v245099@dac.unicamp.br \\
-\textbf{206806} &            vinicius jeronimo capodalio &                  50.0 &        0.00 &        7.08 &        2.65 &                      0.0 &       29.17 &        0.00 &                        0.0 &  v206806@dac.unicamp.br \\
-\textbf{225851} &                william de sousa rabelo &                  50.0 &           - &           - &           - &                      0.0 &           - &      100.00 &                        0.0 &  w225851@dac.unicamp.br \\
+\textbf{230645} &                      0.0 \\
+\textbf{213549} &                      0.0 \\
+\textbf{257748} &                      7.0 \\
+\textbf{232568} &                      7.0 \\
+\textbf{233566} &                      0.0 \\
+\textbf{215626} &                      0.0 \\
+\textbf{91108 } &                        - \\
+\textbf{234311} &                      7.0 \\
+\textbf{216397} &                      7.0 \\
+\textbf{197474} &                      0.0 \\
+\textbf{234982} &                        - \\
+\textbf{235042} &                      5.0 \\
+\textbf{197724} &                      5.0 \\
+\textbf{217350} &                        - \\
+\textbf{174154} &                      0.0 \\
+\textbf{237534} &                      0.0 \\
+\textbf{237856} &                      7.0 \\
+\textbf{199967} &                     10.0 \\
+\textbf{103034} &                      0.0 \\
+\textbf{172577} &                      0.0 \\
+\textbf{159866} &                      7.0 \\
+\textbf{221896} &                      0.0 \\
+\textbf{257876} &                      0.0 \\
+\textbf{242087} &                        - \\
+\textbf{242328} &                      0.0 \\
+\textbf{147614} &                      0.0 \\
+\textbf{176104} &                        - \\
+\textbf{205149} &                      0.0 \\
+\textbf{205151} &                      0.0 \\
+\textbf{244207} &                      7.0 \\
+\textbf{158425} &                     10.0 \\
+\textbf{257932} &                      7.0 \\
+\textbf{177964} &                     10.0 \\
+\textbf{245099} &                      7.0 \\
+\textbf{206806} &                      3.0 \\
+\textbf{225851} &                      0.0 \\
 \end{longtable}
-\end{landscape}\end{center}
+\end{center}
+\subsection{Notas}
+\label{sec:org078d22a}
+\begin{center}
+\includegraphics[width=.9\linewidth]{./figs/ncm.png}
+\end{center}
 
 
-\section{Seminários}
-\label{sec:orgd54b7cd}
-\subsection{Sorteio}
-\label{sec:org5816f9c}
-\begin{table}
-\centering
-\caption{Resultado sorteio das atas - Seminários}
+\subsection{Notas e Presença}
+\label{sec:org205abf6}
+\begin{center}
+\includegraphics[width=.9\linewidth]{./figs/ncm_presenca.png}
+\end{center}
+\subsection{Verificação de plágio por amostragem}
+\label{sec:org30b5926}
+\subsubsection{Sorteio}
+\label{sec:orgab9fc2a}
+
+\begin{minted}[frame=lines,fontsize=\scriptsize,linenos]{python}
+pre_selecionados = ["216397", "206806"]
+alunos = df.shape[0]
+sample = 0.3
+amostra = round(alunos * sample) - len(pre_selecionados)
+bad_df = df.index.isin(pre_selecionados)
+elegivies = (
+    df.loc[~bad_df]
+    .query("`Resenha Regime de Metas` > 0")["Resenha Regime de Metas"]
+    .index.tolist()
+)
+
+resultado = np.random.choice(
+    a=elegivies, size=amostra, replace=False
+).tolist()  # Sem repetição
+resultado = pre_selecionados + resultado
+resultado = np.sort(resultado)
+resultado = pd.DataFrame(resultado)
+resultado.columns = ["RA Sorteados"]
+resultado.index = [i + 1 for i in resultado.index]
+print(resultado.to_latex())
+resultado
+\end{minted}
+
 \begin{tabular}{ll}
 \toprule
-{} & Resultado \\
-Grupos   &           \\
+{} & RA Sorteados \\
 \midrule
-Grupo 1  &     Ata 7 \\
-Grupo 2  &     Ata 5 \\
-Grupo 3  &     Ata 1 \\
-Grupo 4  &    Ata 11 \\
-Grupo 5  &     Ata 8 \\
-Grupo 6  &     Ata 9 \\
-Grupo 7  &    Ata 12 \\
-Grupo 8  &    Ata 10 \\
-Grupo 9  &     Ata 2 \\
-Grupo 10 &     Ata 4 \\
-Grupo 11 &     Ata 6 \\
-Grupo 12 &     Ata 3 \\
+1  &       158425 \\
+2  &       159866 \\
+3  &       197724 \\
+4  &       199967 \\
+5  &       206806 \\
+6  &       216397 \\
+7  &       234311 \\
+8  &       244207 \\
+9  &       245099 \\
+10 &       257748 \\
+11 &       257932 \\
 \bottomrule
 \end{tabular}
+
+
+\subsubsection{Resultado Turnitin}
+\label{sec:org27e35f0}
+
+\begin{table}[htbp]
+\caption{\label{TurnitinNCM}Resumo relatório de origilidadade}
+\centering
+\begin{tabular}{rl}
+\hline
+RA & Grau de semelhança\\
+\hline
+158425 & 31\%\\
+159866 & 11\%\\
+199967 & 17\%\\
+206806 & 40\\
+216397 & 19\%\\
+234311 & 0\%\\
+244207 & 55\%\\
+245099 & 1\%\\
+257748 & 15\%\\
+257932 & 15\%\\
+\hline
+\end{tabular}
 \end{table}
+\begin{enumerate}
+\item Gráfico
+\label{sec:org799f88d}
+\begin{center}
+\includegraphics[width=.9\linewidth]{./figs/turintin_NCM_fig.png}
+\end{center}
+\end{enumerate}
 
+\section{Lista de presença e notas}
+\label{sec:org28afd8a}
+Traceback (most recent call last):
+  File "<stdin>", line 1, in <module>
+  File "/tmp/py8k63DY", line 3, in <module>
+  File "/tmp/babel-q75UWw/python-qwOp8V", line 6, in <module>
+    turnitin["Grau de Semelhança"] = [int(grau[:-1])/100 for grau in turnitin["Grau de Semelhança"]]
+  File "/tmp/babel-q75UWw/python-qwOp8V", line 6, in <listcomp>
+    turnitin["Grau de Semelhança"] = [int(grau[:-1])/100 for grau in turnitin["Grau de Semelhança"]]
+TypeError: 'int' object is not subscriptable
+>>> \begin{longtable}{llrrrrrrrrrrl}
+\caption{Lista de presença e de notas}\label{lista}\\
+\toprule
+{} &                                   Nome &  Resenha Monetaristas &  2020-10-19 &  2020-10-26 &  2020-11-09 &  Resenha Novos Clássicos &  2020-11-16 &  2020-11-23 &  Resenha Novos Keynesianos &  2020-11-30 &  Resenha Regime de Metas &                   Email \\
+\textbf{RA    } &                                        &                       &             &             &             &                          &             &             &                            &             &                          &                         \\
+\midrule
+\endhead
+\midrule
+\multicolumn{13}{r}{{Continued on next page}} \\
+\midrule
+\endfoot
 
-\subsubsection{{\bfseries\sffamily TODO} Selecionar Atas e criar map para substituição}
-\label{sec:orgd5c74b8}
+\bottomrule
+\endlastfoot
+\textbf{230645} &                    alice pereira dario &                  50.0 &       17.86 &        0.00 &       19.47 &                      5.0 &       57.50 &        0.00 &                        5.0 &        4.76 &                      0.0 &  a230645@dac.unicamp.br \\
+\textbf{213549} &           beatriz helena toledo pastre &                  30.0 &        0.00 &        0.00 &        6.19 &                      5.0 &           - &        5.88 &                        0.0 &       80.95 &                      0.0 &  b213549@dac.unicamp.br \\
+\textbf{257748} &             breno rivelino fima castro &                  50.0 &        7.14 &        5.31 &       93.81 &                      7.0 &       28.33 &       70.59 &                        5.0 &       80.00 &                      7.0 &  b257748@dac.unicamp.br \\
+\textbf{232568} &                 caio cimino de almeida &                  70.0 &           - &        2.65 &       54.87 &                      5.0 &       70.00 &        0.00 &                        0.0 &       48.57 &                      7.0 &  c232568@dac.unicamp.br \\
+\textbf{233566} &                 diego tabacof labriola &                  30.0 &        0.00 &        0.00 &       91.15 &                      7.0 &           - &           - &                        0.0 &           - &                      0.0 &  d233566@dac.unicamp.br \\
+\textbf{215626} &                felipe barbosa de souza &                   0.0 &        0.00 &        0.00 &        0.00 &                      0.0 &       18.33 &       11.76 &                        0.0 &       13.33 &                      0.0 &  f215626@dac.unicamp.br \\
+\textbf{91108 } &                 felipe eboli sotorilli &                     - &        1.79 &        0.00 &       77.88 &                        - &       29.17 &       76.47 &                          - &       11.43 &                        - &   f91108@dac.unicamp.br \\
+\textbf{234311} &                  felipe rubbo aguilera &                  50.0 &       33.93 &        1.77 &       92.92 &                      5.0 &           - &       76.47 &                        5.0 &       42.86 &                      7.0 &  f234311@dac.unicamp.br \\
+\textbf{216397} &                        gabriel pereira &                  30.0 &        0.00 &        0.88 &       76.11 &                      3.0 &        0.83 &        0.00 &                        0.0 &       28.57 &                      7.0 &  g216397@dac.unicamp.br \\
+\textbf{197474} &                gabriel pereira jovetta &                  50.0 &        0.00 &        4.42 &       51.33 &                      5.0 &       46.67 &       47.06 &                        0.0 &        0.00 &                      0.0 &  g197474@dac.unicamp.br \\
+\textbf{234982} &                 gabriel pereira santos &                   0.0 &           - &       13.27 &        0.00 &                      0.0 &           - &           - &                          - &           - &                        - &  g234982@dac.unicamp.br \\
+\textbf{235042} &                gabriel silva gonçalves &                   0.0 &        0.00 &        0.00 &        0.00 &                      5.0 &           - &       17.65 &                        5.0 &       82.86 &                      5.0 &  g235042@dac.unicamp.br \\
+\textbf{197724} &           gabriela santana das virgens &                  50.0 &        0.00 &        0.88 &       74.34 &                      5.0 &       30.00 &       82.35 &                        5.0 &       82.86 &                      5.0 &  g197724@dac.unicamp.br \\
+\textbf{217350} &       guilherme yoshio agata domingues &                  30.0 &           - &           - &           - &                      0.0 &           - &           - &                          - &           - &                        - &  g217350@dac.unicamp.br \\
+\textbf{174154} &               gustavo josé lara campos &                  30.0 &        0.00 &        4.42 &       16.81 &                      0.0 &           - &           - &                        0.0 &           - &                      0.0 &  g174154@dac.unicamp.br \\
+\textbf{237534} &         joao mateus rodrigues da silva &                  30.0 &           - &           - &           - &                      3.0 &           - &           - &                        0.0 &       11.43 &                      0.0 &  j237534@dac.unicamp.br \\
+\textbf{237856} &        joão vitor dos santos rodrigues &                  50.0 &        1.79 &        0.00 &       91.15 &                      5.0 &       90.83 &        0.00 &                        0.0 &        0.00 &                      7.0 &  j237856@dac.unicamp.br \\
+\textbf{199967} &                   jonas pereira cintra &                  70.0 &        0.00 &        3.54 &       82.30 &                      7.0 &       50.83 &        0.00 &                        7.0 &       82.86 &                     10.0 &  j199967@dac.unicamp.br \\
+\textbf{103034} &  leonardo augusto de oliveira piovesan &                  50.0 &        0.00 &        0.00 &       93.81 &                      5.0 &       93.33 &       70.59 &                        0.0 &       89.52 &                      0.0 &  l103034@dac.unicamp.br \\
+\textbf{172577} &                   lucas azevedo soares &                  50.0 &        2.68 &        5.31 &       14.16 &                      7.0 &       75.00 &       76.47 &                        0.0 &       87.62 &                      0.0 &  l172577@dac.unicamp.br \\
+\textbf{159866} &              marcela chenfel dos anjos &                  50.0 &        0.89 &        0.00 &       91.15 &                      5.0 &       50.83 &       76.47 &                        0.0 &       33.33 &                      7.0 &  m159866@dac.unicamp.br \\
+\textbf{221896} &               mariana sayuri silva doi &                  70.0 &       34.82 &        0.88 &       18.58 &                     10.0 &       37.50 &        0.00 &                       10.0 &        0.00 &                      0.0 &  m221896@dac.unicamp.br \\
+\textbf{257876} &    maryana beatriz ventura de carvalho &                 100.0 &       67.86 &        0.88 &       93.81 &                     10.0 &       83.33 &       70.59 &                       10.0 &       81.90 &                      0.0 &  m257876@dac.unicamp.br \\
+\textbf{242087} &                          miguel razera &                   0.0 &        0.89 &        1.77 &        0.00 &                        - &           - &           - &                          - &           - &                        - &  m242087@dac.unicamp.br \\
+\textbf{242328} &    natalia kimberlle tavares imperiano &                  50.0 &           - &           - &        0.88 &                      7.0 &           - &           - &                        5.0 &           - &                      0.0 &  n242328@dac.unicamp.br \\
+\textbf{147614} &          pedro augusto de almeida rosa &                   0.0 &        0.00 &        0.00 &        0.00 &                      0.0 &       93.33 &       76.47 &                        0.0 &        0.00 &                      0.0 &  p147614@dac.unicamp.br \\
+\textbf{176104} &              rafael da silva tomasella &                   0.0 &           - &           - &           - &                        - &           - &           - &                          - &           - &                        - &  r176104@dac.unicamp.br \\
+\textbf{205149} &                 raphaela freitas souza &                 100.0 &           - &           - &           - &                      0.0 &           - &           - &                        0.0 &           - &                      0.0 &  r205149@dac.unicamp.br \\
+\textbf{205151} &               raphaela prado francisco &                   0.0 &        0.89 &       47.79 &        4.42 &                      7.0 &           - &       76.47 &                        0.0 &       63.81 &                      0.0 &  r205151@dac.unicamp.br \\
+\textbf{244207} &                 sanny alves dos santos &                  70.0 &        0.89 &        0.00 &        0.00 &                      7.0 &           - &       64.71 &                        0.0 &       85.71 &                      7.0 &  s244207@dac.unicamp.br \\
+\textbf{158425} &                           tales alonso &                  50.0 &        0.89 &       61.95 &       61.06 &                      7.0 &       29.17 &       70.59 &                        5.0 &       19.05 &                     10.0 &  t158425@dac.unicamp.br \\
+\textbf{257932} &              thaís monello de oliveira &                 100.0 &        0.89 &        0.00 &       30.09 &                      7.0 &       24.17 &       64.71 &                        0.0 &       86.67 &                      7.0 &  t257932@dac.unicamp.br \\
+\textbf{177964} &               victor hugo alves duarte &                  70.0 &        0.00 &        0.00 &        0.00 &                      5.0 &           - &           - &                        0.0 &           - &                     10.0 &  v177964@dac.unicamp.br \\
+\textbf{245099} &                            victor maia &                  50.0 &       16.07 &       53.98 &       70.80 &                      7.0 &       25.00 &        0.00 &                        0.0 &       43.81 &                      7.0 &  v245099@dac.unicamp.br \\
+\textbf{206806} &            vinicius jeronimo capodalio &                  50.0 &        0.00 &        7.08 &        2.65 &                      0.0 &       29.17 &        0.00 &                        0.0 &       80.00 &                      3.0 &  v206806@dac.unicamp.br \\
+\textbf{225851} &                william de sousa rabelo &                  50.0 &           - &           - &           - &                      0.0 &           - &      100.00 &                        0.0 &        0.00 &                      0.0 &  w225851@dac.unicamp.br \\
+\end{longtable}
+\end{landscape}\end{center}
 \end{document}
