--- a/Materias/2S2020/PED_CE342/Turma_A/Turma_A.tex
+++ b/Materias/2S2020/PED_CE342/Turma_A/Turma_A.tex
@@ -1,4 +1,4 @@
-% Created 2020-12-03 qui 14:20
+% Created 2020-12-04 sex 18:58
 % Intended LaTeX compiler: pdflatex
 \documentclass[11pt]{article}
 \usepackage[utf8]{inputenc}
@@ -38,7 +38,7 @@ citecolor=blue,filecolor=blue,menucolor=blue,urlcolor=blue]{hyperref}
 \maketitle
 
 \section{Monetaristas}
-\label{sec:orgf197a76}
+\label{sec:orge3b6b1b}
 
 \begin{center}
 \begin{longtable}{lr}
@@ -103,14 +103,14 @@ citecolor=blue,filecolor=blue,menucolor=blue,urlcolor=blue]{hyperref}
 
 
 \subsection{Notas}
-\label{sec:org461484c}
+\label{sec:org39adc67}
 \begin{center}
 \includegraphics[width=.9\linewidth]{./figs/monetaristas.png}
 \end{center}
 
 
 \subsection{Notas e presença}
-\label{sec:org92528d4}
+\label{sec:orgda3cef0}
 
 \begin{center}
 \includegraphics[width=.9\linewidth]{./figs/monetaristas_presenca.png}
@@ -118,7 +118,7 @@ citecolor=blue,filecolor=blue,menucolor=blue,urlcolor=blue]{hyperref}
 
 
 \section{Novos Clássicos}
-\label{sec:orge8c3322}
+\label{sec:org3804059}
 
 \begin{itemize}
 \item[{$\square$}] Identificar respostas das questões (forms)
@@ -186,20 +186,20 @@ citecolor=blue,filecolor=blue,menucolor=blue,urlcolor=blue]{hyperref}
 \end{longtable}
 \end{center}
 \subsection{Notas}
-\label{sec:org7d4c437}
+\label{sec:org48a8c44}
 \begin{center}
 \includegraphics[width=.9\linewidth]{./figs/novosclassicos.png}
 \end{center}
 
 \subsection{Notas e Presença}
-\label{sec:org21fe381}
+\label{sec:orga17c858}
 \begin{center}
 \includegraphics[width=.9\linewidth]{./figs/novosclassicos_presenca.png}
 \end{center}
 \subsection{Verificação de plágio por amostragem}
-\label{sec:org0bc49a3}
+\label{sec:orgd4c9915}
 \subsubsection{Sorteio}
-\label{sec:org4ca93fd}
+\label{sec:orga59b081}
 
 \begin{minted}[frame=lines,fontsize=\scriptsize,linenos]{python}
 pre_selecionados = ["238414"]
@@ -240,7 +240,7 @@ resultado
 \end{verbatim}
 
 \subsubsection{Resultado Turnitin}
-\label{sec:org4c89f1b}
+\label{sec:org9abae01}
 
 \begin{table}[htbp]
 \caption{\label{TurnitinNvC}Resumo relatório de origilidadade}
@@ -269,17 +269,17 @@ RA & Grau de semelhança\\
 
 \begin{enumerate}
 \item Gráfico
-\label{sec:org4a65a23}
+\label{sec:orge8ce98f}
 \begin{center}
 \includegraphics[width=.9\linewidth]{./figs/turintin_NvC_fig.png}
 \end{center}
 
 \item Atualização das notas
-\label{sec:org9a63434}
+\label{sec:org440d7ba}
 \end{enumerate}
 
 \subsection{Questões}
-\label{sec:orgf562257}
+\label{sec:org5303acf}
 
 \begin{verbatim}
 Sobreposição das respostas 0.717948717948718%
@@ -287,7 +287,7 @@ Sobreposição das respostas 0.717948717948718%
 
 
 \subsubsection{Importando pacotes e funções}
-\label{sec:orgbc72205}
+\label{sec:orgf73c0dd}
 
 \begin{center}
 \includegraphics[width=.9\linewidth]{./figs/similarity_forms_1.png}
@@ -305,7 +305,7 @@ Carimbo de data/hora         &        &        &                                
 \end{tabular}
 
 \section{Novos Keynesianos}
-\label{sec:org28a8a08}
+\label{sec:org2e37c39}
 
 \begin{itemize}
 \item[{$\square$}] Computar notas
@@ -373,20 +373,20 @@ Carimbo de data/hora         &        &        &                                
 \end{longtable}
 \end{center}
 \subsection{Notas}
-\label{sec:orgcb92828}
+\label{sec:org7e7936e}
 \begin{center}
 \includegraphics[width=.9\linewidth]{./figs/novoskeynesianos.png}
 \end{center}
 
 \subsection{Notas e Presença}
-\label{sec:orge52a32c}
+\label{sec:orgee99225}
 \begin{center}
 \includegraphics[width=.9\linewidth]{./figs/novoskeynesianos_presenca.png}
 \end{center}
 \subsection{Verificação de plágio por amostragem}
-\label{sec:org145e352}
+\label{sec:org200b9a7}
 \subsubsection{Sorteio}
-\label{sec:org3daaf4b}
+\label{sec:orgfc3beea}
 
 \begin{minted}[frame=lines,fontsize=\scriptsize,linenos]{python}
 pre_selecionados = ["212883", "231898", "232796", "233335", "206194"]
@@ -431,7 +431,7 @@ resultado
 \end{tabular}
 
 \subsubsection{Resultado Turnitin}
-\label{sec:org0fce17d}
+\label{sec:orgcc99405}
 
 \begin{table}[htbp]
 \caption{\label{TurnitinNvK}Resumo relatório de origilidadade}
@@ -458,30 +458,98 @@ RA & Grau de semelhança\\
 \end{table}
 \begin{enumerate}
 \item Gráfico
-\label{sec:org4757c6f}
+\label{sec:org82442ea}
 \begin{center}
 \includegraphics[width=.9\linewidth]{./figs/turintin_NvK_fig.png}
 \end{center}
 \end{enumerate}
 
 \section{Regime de Metas}
-\label{sec:org2436039}
+\label{sec:org132ae17}
 
 \begin{itemize}
 \item[{$\square$}] Preencher presenhas na tabela da Ana Rosa
 \item[{$\square$}] Sortear turnitin
 \end{itemize}
+\begin{center}
+\begin{longtable}{lr}
+\caption{Notas das resenhas - Novo Consenso}\\
+\toprule
+{} &  Resenha Regime de Metas \\
+\textbf{RA    } &                          \\
+\midrule
+\endhead
+\midrule
+\multicolumn{2}{r}{{Continued on next page}} \\
+\midrule
+\endfoot
+
+\bottomrule
+\endlastfoot
+\textbf{212883} &                      0.0 \\
+\textbf{212900} &                      5.0 \\
+\textbf{231302} &                      7.0 \\
+\textbf{231732} &                        - \\
+\textbf{213360} &                     10.0 \\
+\textbf{231898} &                      0.0 \\
+\textbf{213731} &                      7.0 \\
+\textbf{232395} &                      5.0 \\
+\textbf{232796} &                      5.0 \\
+\textbf{233335} &                      5.0 \\
+\textbf{233747} &                      7.0 \\
+\textbf{255207} &                      5.0 \\
+\textbf{216459} &                        - \\
+\textbf{235951} &                        - \\
+\textbf{236276} &                        - \\
+\textbf{218090} &                     10.0 \\
+\textbf{255241} &                      5.0 \\
+\textbf{237618} &                     10.0 \\
+\textbf{199735} &                      0.0 \\
+\textbf{218975} &                      7.0 \\
+\textbf{238414} &                     10.0 \\
+\textbf{219613} &                      0.0 \\
+\textbf{219907} &                      0.0 \\
+\textbf{239052} &                      0.0 \\
+\textbf{220194} &                      0.0 \\
+\textbf{201326} &                     10.0 \\
+\textbf{156242} &                     10.0 \\
+\textbf{240317} &                        - \\
+\textbf{240409} &                      0.0 \\
+\textbf{221515} &                      7.0 \\
+\textbf{255293} &                      0.0 \\
+\textbf{241430} &                      0.0 \\
+\textbf{222315} &                      7.0 \\
+\textbf{184528} &                      5.0 \\
+\textbf{222615} &                     10.0 \\
+\textbf{186966} &                      0.0 \\
+\textbf{244321} &                      5.0 \\
+\textbf{244379} &                      7.0 \\
+\textbf{187323} &                     10.0 \\
+\textbf{206194} &                      0.0 \\
+\textbf{245212} &                     10.0 \\
+\textbf{206883} &                      7.0 \\
+\textbf{245459} &                      7.0 \\
+\end{longtable}
+\end{center}
 \subsection{Notas}
-\label{sec:org1e241c4}
+\label{sec:orgae5c7b9}
+\begin{center}
+\includegraphics[width=.9\linewidth]{./figs/ncm.png}
+\end{center}
+
+
 \subsection{Notas e Presença}
-\label{sec:orgb8eaf57}
+\label{sec:org919447e}
+\begin{center}
+\includegraphics[width=.9\linewidth]{./figs/ncm_presenca.png}
+\end{center}
 \subsection{Verificação de plágio por amostragem}
-\label{sec:org2bc993c}
+\label{sec:orgb590596}
 \subsubsection{Sorteio}
-\label{sec:org90c7886}
+\label{sec:org4ac4a54}
 
 \begin{minted}[frame=lines,fontsize=\scriptsize,linenos]{python}
-pre_selecionados = [""]
+pre_selecionados = ["240317", "245459"]
 alunos = df.shape[0]
 sample = 0.3
 amostra = round(alunos * sample) - len(pre_selecionados)
@@ -504,9 +572,29 @@ print(resultado.to_latex())
 resultado
 \end{minted}
 
+\begin{tabular}{ll}
+\toprule
+{} & RA Sorteados \\
+\midrule
+1  &       187323 \\
+2  &       206883 \\
+3  &       213360 \\
+4  &       222315 \\
+5  &       222615 \\
+6  &       232395 \\
+7  &       233335 \\
+8  &       237618 \\
+9  &       238414 \\
+10 &       240317 \\
+11 &       244379 \\
+12 &       245459 \\
+13 &       255207 \\
+\bottomrule
+\end{tabular}
+
 
 \subsubsection{Resultado Turnitin}
-\label{sec:org19f06d3}
+\label{sec:orge067d7e}
 
 \begin{table}[htbp]
 \caption{\label{TurnitinNCM}Resumo relatório de origilidadade}
@@ -515,124 +603,94 @@ resultado
 \hline
 RA & Grau de semelhança\\
 \hline
-199735 & 3\%\\
-206194 & 0\%\\
-206883 & 5\%\\
-212883 & 21\%\\
-212900 & 0\%\\
-218090 & 7\%\\
-219613 & 14\%\\
-231898 & 1\%\\
-232395 & 8\%\\
-232796 & 5\%\\
-233335 & 2\%\\
-238414 & 4\%\\
-241430 & 0\%\\
+187323 & 42\%\\
+206883 & 35\%\\
+213360 & 6\%\\
+222315 & 25\%\\
+222615 & 25\%\\
+232395 & 20\%\\
+233335 & 24\%\\
+237618 & 12\%\\
+238414 & 11\%\\
+240317 & 82\%\\
+244321 & 9\%\\
+245459 & 3\%\\
+255207 & 32\%\\
 \hline
 \end{tabular}
 \end{table}
 \begin{enumerate}
 \item Gráfico
-\label{sec:org84e6884}
+\label{sec:orgac51bf9}
+\begin{center}
+\includegraphics[width=.9\linewidth]{./figs/turintin_NCM_fig.png}
+\end{center}
 \end{enumerate}
+
+
 \section{Lista de presença e notas}
-\label{sec:org24faf14}
+\label{sec:org900b43d}
 \begin{center}\begin{landscape}
 \small
 \setlength\LTleft{0pt}
 \setlength\LTright{0pt}
-\begin{longtable}{llrrrrrrrrrl}
+\begin{longtable}{llrrrrrrrrrrl}
 \caption{Lista de presença e de notas}\label{lista}\\
 \toprule
-{} &                                  Nome &  Resenha Monetaristas &  2020-10-19 &  2020-10-26 &  2020-11-09 &  Resenha Novos Clássicos &  2020-11-16 &  2020-11-23 &  Resenha Novos Keynesianos &  2020-11-30 &                   Email \\
-\textbf{RA    } &                                       &                       &             &             &             &                          &             &             &                            &             &                         \\
+{} &                                  Nome &  Resenha Monetaristas &  2020-10-19 &  2020-10-26 &  2020-11-09 &  Resenha Novos Clássicos &  2020-11-16 &  2020-11-23 &  Resenha Novos Keynesianos &  2020-11-30 &  Resenha Regime de Metas &                   Email \\
+\textbf{RA    } &                                       &                       &             &             &             &                          &             &             &                            &             &                          &                         \\
 \midrule
 \endhead
 \midrule
-\multicolumn{12}{r}{{Continued on next page}} \\
+\multicolumn{13}{r}{{Continued on next page}} \\
 \midrule
 \endfoot
 
 \bottomrule
 \endlastfoot
-\textbf{212883} &                    ana pasti villalba &                  50.0 &           - &           - &       11.30 &                      5.0 &       36.96 &       16.39 &                        5.0 &        0.00 &  a212883@dac.unicamp.br \\
-\textbf{212900} &                     ana paula martins &                  50.0 &        0.00 &        0.00 &       14.78 &                     10.0 &       64.49 &       81.97 &                        7.0 &       77.48 &  a212900@dac.unicamp.br \\
-\textbf{231302} &              andré apolinário cardoso &                  70.0 &        0.00 &        0.00 &       94.78 &                      5.0 &        8.70 &       52.46 &                        0.0 &       61.26 &  a231302@dac.unicamp.br \\
-\textbf{231732} &             artur preciozo figliolino &                   0.0 &        0.00 &        0.00 &        0.00 &                        - &           - &           - &                          - &           - &  a231732@dac.unicamp.br \\
-\textbf{213360} &                    augusto lima alves &                  70.0 &       54.03 &        0.00 &        0.00 &                     10.0 &       84.06 &       48.36 &                        0.0 &       43.24 &  a213360@dac.unicamp.br \\
-\textbf{231898} &         beatriz consolmagno de marchi &                  70.0 &        1.61 &        0.00 &       13.04 &                      5.0 &       10.14 &       54.92 &                        7.0 &        0.90 &  b231898@dac.unicamp.br \\
-\textbf{213731} &                     bianca senne roma &                  70.0 &       29.03 &       62.64 &       31.30 &                     10.0 &        1.45 &       88.52 &                        7.0 &       68.47 &  b213731@dac.unicamp.br \\
-\textbf{232395} &                   bruno bueno de lima &                  30.0 &        0.00 &        0.00 &       12.17 &                      7.0 &           - &        3.28 &                        7.0 &       14.41 &  b232395@dac.unicamp.br \\
-\textbf{232796} &          carlos henrique araujo viana &                  70.0 &        4.84 &       14.29 &       18.26 &                      5.0 &        2.90 &       82.79 &                        7.0 &       10.81 &  c232796@dac.unicamp.br \\
-\textbf{233335} &                 danielle araujo sousa &                  50.0 &        1.61 &        0.00 &       12.17 &                      5.0 &        3.62 &       18.03 &                        5.0 &        0.90 &  d233335@dac.unicamp.br \\
-\textbf{233747} &          eduardo ranieri guedes pinto &                  70.0 &       49.19 &       19.78 &       95.65 &                     10.0 &       22.46 &        5.74 &                        7.0 &       85.59 &  e233747@dac.unicamp.br \\
-\textbf{255207} &                  fernanda lima santos &                  50.0 &           - &           - &           - &                      0.0 &           - &           - &                        0.0 &           - &  f255207@dac.unicamp.br \\
-\textbf{216459} &            gabriel santana rosmaninho &                   0.0 &        0.00 &        0.00 &        0.00 &                        - &           - &           - &                          - &           - &  g216459@dac.unicamp.br \\
-\textbf{235951} &                guilherme garcia gobbo &                  30.0 &        2.42 &        0.00 &        0.00 &                        - &           - &           - &                          - &           - &  g235951@dac.unicamp.br \\
-\textbf{236276} &               gustavo henrique biondi &                   0.0 &        0.00 &        1.10 &        0.00 &                        - &           - &           - &                          - &           - &  g236276@dac.unicamp.br \\
-\textbf{218090} &            isabela de oliveira garcia &                  70.0 &        1.61 &        0.00 &       93.04 &                     10.0 &       78.99 &       13.11 &                       10.0 &       68.47 &  i218090@dac.unicamp.br \\
-\textbf{255241} &             isabella rodrigues soares &                  50.0 &        0.81 &        0.00 &       87.83 &                      7.0 &       68.84 &       59.02 &                        3.0 &       45.95 &  i255241@dac.unicamp.br \\
-\textbf{237618} &           joão pedro de paula e silva &                  70.0 &        2.42 &        0.00 &        2.61 &                     10.0 &        2.90 &       58.20 &                       10.0 &       89.19 &  j237618@dac.unicamp.br \\
-\textbf{199735} &                    joao pedro gabriel &                  50.0 &       11.29 &        0.00 &       89.57 &                      0.0 &       79.71 &        1.64 &                        5.0 &       88.29 &  j199735@dac.unicamp.br \\
-\textbf{218975} &                joão vitor santos melo &                  70.0 &       22.58 &        8.79 &       96.52 &                      5.0 &       69.57 &       86.89 &                        0.0 &       85.59 &  j218975@dac.unicamp.br \\
-\textbf{238414} &     juliana florentina fernandes leão &                  70.0 &       16.94 &       40.66 &       19.13 &                      5.0 &       78.26 &        8.20 &                        7.0 &        3.60 &  j238414@dac.unicamp.br \\
-\textbf{219613} &  keivan de castro almeida g. de souza &                  50.0 &        6.45 &        0.00 &       15.65 &                      5.0 &           - &           - &                        5.0 &           - &  k219613@dac.unicamp.br \\
-\textbf{219907} &           laura maria alves de mattos &                 100.0 &        2.42 &        0.00 &       40.87 &                      7.0 &           - &           - &                       10.0 &           - &  l219907@dac.unicamp.br \\
-\textbf{239052} &        lavínia dias de oliveira roman &                  70.0 &       11.29 &        0.00 &       81.74 &                      7.0 &       84.06 &       65.57 &                        7.0 &        4.50 &  l239052@dac.unicamp.br \\
-\textbf{220194} &             leonardo tredici de souza &                  70.0 &        0.81 &        1.10 &       54.78 &                      5.0 &       39.13 &        0.00 &                        0.0 &        0.00 &  l220194@dac.unicamp.br \\
-\textbf{201326} &               leonardo vitor da silva &                  50.0 &       75.81 &        0.00 &        6.09 &                     10.0 &       84.78 &        4.10 &                       10.0 &       91.89 &  l201326@dac.unicamp.br \\
-\textbf{156242} &                 leticia da silva cruz &                   0.0 &           - &           - &       56.52 &                      5.0 &           - &       38.52 &                        7.0 &        3.60 &  l156242@dac.unicamp.br \\
-\textbf{240317} &                       luis felipe avi &                  30.0 &           - &       30.77 &        7.83 &                      5.0 &        0.72 &        9.84 &                        0.0 &        8.11 &  l240317@dac.unicamp.br \\
-\textbf{240409} &                luísa mendes amstalden &                  70.0 &        5.65 &        0.00 &        8.70 &                      7.0 &        3.62 &        4.10 &                        7.0 &        0.00 &  l240409@dac.unicamp.br \\
-\textbf{221515} &        marcos baldez lagoeiro barroso &                  50.0 &        0.81 &        1.10 &       42.61 &                      5.0 &       13.04 &        9.02 &                        0.0 &       81.98 &  m221515@dac.unicamp.br \\
-\textbf{255293} &         maria júlia faustino da silva &                  30.0 &           - &           - &        0.00 &                      0.0 &           - &           - &                        0.0 &           - &  m255293@dac.unicamp.br \\
-\textbf{241430} &              marina de marco santucci &                  50.0 &        0.00 &       74.73 &       27.83 &                      5.0 &           - &           - &                        5.0 &       61.26 &  m241430@dac.unicamp.br \\
-\textbf{222315} &                 matheus oliveira lima &                  50.0 &        0.81 &        0.00 &        7.83 &                     10.0 &        1.45 &       43.44 &                        0.0 &        2.70 &  m222315@dac.unicamp.br \\
-\textbf{184528} &       maycon jefferson teodoro bosing &                  50.0 &        0.00 &       71.43 &        0.00 &                      0.0 &           - &           - &                        0.0 &           - &  m184528@dac.unicamp.br \\
-\textbf{222615} &     moises aparecido dos santos filho &                  70.0 &        0.00 &        0.00 &       89.57 &                      3.0 &       31.88 &        0.00 &                        7.0 &       82.88 &  m222615@dac.unicamp.br \\
-\textbf{186966} &     samuel henrique rezende bernardes &                   0.0 &           - &           - &           - &                      0.0 &           - &           - &                        0.0 &           - &  s186966@dac.unicamp.br \\
-\textbf{244321} &         sofia helena de oliveira nery &                  50.0 &        3.23 &        0.00 &       92.17 &                      5.0 &       19.57 &       52.46 &                        0.0 &        7.21 &  s244321@dac.unicamp.br \\
-\textbf{244379} &                stefanno felipe bicudo &                  50.0 &        1.61 &        0.00 &       79.13 &                      5.0 &       66.67 &       54.10 &                        0.0 &       90.99 &  s244379@dac.unicamp.br \\
-\textbf{187323} &              tatiana marchiori keller &                 100.0 &        0.00 &        0.00 &        7.83 &                      7.0 &           - &        0.82 &                        0.0 &        0.00 &  t187323@dac.unicamp.br \\
-\textbf{206194} &       thiago alexandre ramos dos reis &                  50.0 &       46.77 &        1.10 &       93.91 &                      5.0 &       54.35 &        0.00 &                        3.0 &       92.79 &  t206194@dac.unicamp.br \\
-\textbf{245212} &          victoria silva torres santos &                 100.0 &           - &           - &           - &                     10.0 &           - &           - &                        0.0 &           - &  v245212@dac.unicamp.br \\
-\textbf{206883} &       vinicius santos bering da silva &                   0.0 &       16.94 &        0.00 &       99.13 &                      3.0 &       23.91 &        0.82 &                        7.0 &       35.14 &  v206883@dac.unicamp.br \\
-\textbf{245459} &                     vinicius venancio &                  70.0 &        4.84 &        1.10 &       13.91 &                      0.0 &       69.57 &       57.38 &                        0.0 &        0.00 &  v245459@dac.unicamp.br \\
+\textbf{212883} &                    ana pasti villalba &                  50.0 &           - &           - &       11.30 &                      5.0 &       36.96 &       16.39 &                        5.0 &        0.00 &                      0.0 &  a212883@dac.unicamp.br \\
+\textbf{212900} &                     ana paula martins &                  50.0 &        0.00 &        0.00 &       14.78 &                     10.0 &       64.49 &       81.97 &                        7.0 &       77.48 &                      5.0 &  a212900@dac.unicamp.br \\
+\textbf{231302} &              andré apolinário cardoso &                  70.0 &        0.00 &        0.00 &       94.78 &                      5.0 &        8.70 &       52.46 &                        0.0 &       61.26 &                      7.0 &  a231302@dac.unicamp.br \\
+\textbf{231732} &             artur preciozo figliolino &                   0.0 &        0.00 &        0.00 &        0.00 &                        - &           - &           - &                          - &           - &                        - &  a231732@dac.unicamp.br \\
+\textbf{213360} &                    augusto lima alves &                  70.0 &       54.03 &        0.00 &        0.00 &                     10.0 &       84.06 &       48.36 &                        0.0 &       43.24 &                     10.0 &  a213360@dac.unicamp.br \\
+\textbf{231898} &         beatriz consolmagno de marchi &                  70.0 &        1.61 &        0.00 &       13.04 &                      5.0 &       10.14 &       54.92 &                        7.0 &        0.90 &                      0.0 &  b231898@dac.unicamp.br \\
+\textbf{213731} &                     bianca senne roma &                  70.0 &       29.03 &       62.64 &       31.30 &                     10.0 &        1.45 &       88.52 &                        7.0 &       68.47 &                      7.0 &  b213731@dac.unicamp.br \\
+\textbf{232395} &                   bruno bueno de lima &                  30.0 &        0.00 &        0.00 &       12.17 &                      7.0 &           - &        3.28 &                        7.0 &       14.41 &                      5.0 &  b232395@dac.unicamp.br \\
+\textbf{232796} &          carlos henrique araujo viana &                  70.0 &        4.84 &       14.29 &       18.26 &                      5.0 &        2.90 &       82.79 &                        7.0 &       10.81 &                      5.0 &  c232796@dac.unicamp.br \\
+\textbf{233335} &                 danielle araujo sousa &                  50.0 &        1.61 &        0.00 &       12.17 &                      5.0 &        3.62 &       18.03 &                        5.0 &        0.90 &                      5.0 &  d233335@dac.unicamp.br \\
+\textbf{233747} &          eduardo ranieri guedes pinto &                  70.0 &       49.19 &       19.78 &       95.65 &                     10.0 &       22.46 &        5.74 &                        7.0 &       85.59 &                      7.0 &  e233747@dac.unicamp.br \\
+\textbf{255207} &                  fernanda lima santos &                  50.0 &           - &           - &           - &                      0.0 &           - &           - &                        0.0 &           - &                      5.0 &  f255207@dac.unicamp.br \\
+\textbf{216459} &            gabriel santana rosmaninho &                   0.0 &        0.00 &        0.00 &        0.00 &                        - &           - &           - &                          - &           - &                        - &  g216459@dac.unicamp.br \\
+\textbf{235951} &                guilherme garcia gobbo &                  30.0 &        2.42 &        0.00 &        0.00 &                        - &           - &           - &                          - &           - &                        - &  g235951@dac.unicamp.br \\
+\textbf{236276} &               gustavo henrique biondi &                   0.0 &        0.00 &        1.10 &        0.00 &                        - &           - &           - &                          - &           - &                        - &  g236276@dac.unicamp.br \\
+\textbf{218090} &            isabela de oliveira garcia &                  70.0 &        1.61 &        0.00 &       93.04 &                     10.0 &       78.99 &       13.11 &                       10.0 &       68.47 &                     10.0 &  i218090@dac.unicamp.br \\
+\textbf{255241} &             isabella rodrigues soares &                  50.0 &        0.81 &        0.00 &       87.83 &                      7.0 &       68.84 &       59.02 &                        3.0 &       45.95 &                      5.0 &  i255241@dac.unicamp.br \\
+\textbf{237618} &           joão pedro de paula e silva &                  70.0 &        2.42 &        0.00 &        2.61 &                     10.0 &        2.90 &       58.20 &                       10.0 &       89.19 &                     10.0 &  j237618@dac.unicamp.br \\
+\textbf{199735} &                    joao pedro gabriel &                  50.0 &       11.29 &        0.00 &       89.57 &                      0.0 &       79.71 &        1.64 &                        5.0 &       88.29 &                      0.0 &  j199735@dac.unicamp.br \\
+\textbf{218975} &                joão vitor santos melo &                  70.0 &       22.58 &        8.79 &       96.52 &                      5.0 &       69.57 &       86.89 &                        0.0 &       85.59 &                      7.0 &  j218975@dac.unicamp.br \\
+\textbf{238414} &     juliana florentina fernandes leão &                  70.0 &       16.94 &       40.66 &       19.13 &                      5.0 &       78.26 &        8.20 &                        7.0 &        3.60 &                     10.0 &  j238414@dac.unicamp.br \\
+\textbf{219613} &  keivan de castro almeida g. de souza &                  50.0 &        6.45 &        0.00 &       15.65 &                      5.0 &           - &           - &                        5.0 &           - &                      0.0 &  k219613@dac.unicamp.br \\
+\textbf{219907} &           laura maria alves de mattos &                 100.0 &        2.42 &        0.00 &       40.87 &                      7.0 &           - &           - &                       10.0 &           - &                      0.0 &  l219907@dac.unicamp.br \\
+\textbf{239052} &        lavínia dias de oliveira roman &                  70.0 &       11.29 &        0.00 &       81.74 &                      7.0 &       84.06 &       65.57 &                        7.0 &        4.50 &                      0.0 &  l239052@dac.unicamp.br \\
+\textbf{220194} &             leonardo tredici de souza &                  70.0 &        0.81 &        1.10 &       54.78 &                      5.0 &       39.13 &        0.00 &                        0.0 &        0.00 &                      0.0 &  l220194@dac.unicamp.br \\
+\textbf{201326} &               leonardo vitor da silva &                  50.0 &       75.81 &        0.00 &        6.09 &                     10.0 &       84.78 &        4.10 &                       10.0 &       91.89 &                     10.0 &  l201326@dac.unicamp.br \\
+\textbf{156242} &                 leticia da silva cruz &                   0.0 &           - &           - &       56.52 &                      5.0 &           - &       38.52 &                        7.0 &        3.60 &                     10.0 &  l156242@dac.unicamp.br \\
+\textbf{240317} &                       luis felipe avi &                  30.0 &           - &       30.77 &        7.83 &                      5.0 &        0.72 &        9.84 &                        0.0 &        8.11 &                        - &  l240317@dac.unicamp.br \\
+\textbf{240409} &                luísa mendes amstalden &                  70.0 &        5.65 &        0.00 &        8.70 &                      7.0 &        3.62 &        4.10 &                        7.0 &        0.00 &                      0.0 &  l240409@dac.unicamp.br \\
+\textbf{221515} &        marcos baldez lagoeiro barroso &                  50.0 &        0.81 &        1.10 &       42.61 &                      5.0 &       13.04 &        9.02 &                        0.0 &       81.98 &                      7.0 &  m221515@dac.unicamp.br \\
+\textbf{255293} &         maria júlia faustino da silva &                  30.0 &           - &           - &        0.00 &                      0.0 &           - &           - &                        0.0 &           - &                      0.0 &  m255293@dac.unicamp.br \\
+\textbf{241430} &              marina de marco santucci &                  50.0 &        0.00 &       74.73 &       27.83 &                      5.0 &           - &           - &                        5.0 &       61.26 &                      0.0 &  m241430@dac.unicamp.br \\
+\textbf{222315} &                 matheus oliveira lima &                  50.0 &        0.81 &        0.00 &        7.83 &                     10.0 &        1.45 &       43.44 &                        0.0 &        2.70 &                      7.0 &  m222315@dac.unicamp.br \\
+\textbf{184528} &       maycon jefferson teodoro bosing &                  50.0 &        0.00 &       71.43 &        0.00 &                      0.0 &           - &           - &                        0.0 &           - &                      5.0 &  m184528@dac.unicamp.br \\
+\textbf{222615} &     moises aparecido dos santos filho &                  70.0 &        0.00 &        0.00 &       89.57 &                      3.0 &       31.88 &        0.00 &                        7.0 &       82.88 &                     10.0 &  m222615@dac.unicamp.br \\
+\textbf{186966} &     samuel henrique rezende bernardes &                   0.0 &           - &           - &           - &                      0.0 &           - &           - &                        0.0 &           - &                      0.0 &  s186966@dac.unicamp.br \\
+\textbf{244321} &         sofia helena de oliveira nery &                  50.0 &        3.23 &        0.00 &       92.17 &                      5.0 &       19.57 &       52.46 &                        0.0 &        7.21 &                      5.0 &  s244321@dac.unicamp.br \\
+\textbf{244379} &                stefanno felipe bicudo &                  50.0 &        1.61 &        0.00 &       79.13 &                      5.0 &       66.67 &       54.10 &                        0.0 &       90.99 &                      7.0 &  s244379@dac.unicamp.br \\
+\textbf{187323} &              tatiana marchiori keller &                 100.0 &        0.00 &        0.00 &        7.83 &                      7.0 &           - &        0.82 &                        0.0 &        0.00 &                     10.0 &  t187323@dac.unicamp.br \\
+\textbf{206194} &       thiago alexandre ramos dos reis &                  50.0 &       46.77 &        1.10 &       93.91 &                      5.0 &       54.35 &        0.00 &                        3.0 &       92.79 &                      0.0 &  t206194@dac.unicamp.br \\
+\textbf{245212} &          victoria silva torres santos &                 100.0 &           - &           - &           - &                     10.0 &           - &           - &                        0.0 &           - &                     10.0 &  v245212@dac.unicamp.br \\
+\textbf{206883} &       vinicius santos bering da silva &                   0.0 &       16.94 &        0.00 &       99.13 &                      3.0 &       23.91 &        0.82 &                        7.0 &       35.14 &                      7.0 &  v206883@dac.unicamp.br \\
+\textbf{245459} &                     vinicius venancio &                  70.0 &        4.84 &        1.10 &       13.91 &                      0.0 &       69.57 &       57.38 &                        0.0 &        0.00 &                      7.0 &  v245459@dac.unicamp.br \\
 \end{longtable}
 \end{landscape}\end{center}
-
-
-\section{Seminários}
-\label{sec:org5e54e59}
-\subsection{Sorteio}
-\label{sec:orga20d006}
-
-\begin{table}
-\centering
-\caption{Resultado sorteio das atas - Seminários}
-\begin{tabular}{ll}
-\toprule
-{} & Resultado \\
-Grupos   &           \\
-\midrule
-Grupo 1  &     Ata 5 \\
-Grupo 2  &    Ata 11 \\
-Grupo 3  &     Ata 7 \\
-Grupo 4  &    Ata 12 \\
-Grupo 5  &     Ata 9 \\
-Grupo 6  &     Ata 4 \\
-Grupo 7  &    Ata 10 \\
-Grupo 8  &     Ata 3 \\
-Grupo 9  &     Ata 8 \\
-Grupo 10 &     Ata 1 \\
-Grupo 11 &     Ata 6 \\
-Grupo 12 &     Ata 2 \\
-\bottomrule
-\end{tabular}
-\end{table}
-
-
-
-\subsubsection{{\bfseries\sffamily TODO} Selecionar Atas e criar map para substituir}
-\label{sec:orga650919}
 \end{document}
